--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="profile" href="../gmpg.org/xfn/11.html">
 <link rel="pingback" href="xmlrpc.html">
 
-<title>Leathersmiths, East Tamaki, Auckland</title>
+<title>luxuryleatherfurniturecare New Delhi India</title>
 
 
 <link rel="canonical" href="index.html" />
@@ -365,7 +365,7 @@ Click the WhatsApp button to get in touch or mail us luxuryleatherfurniturecare@
 			</section> 
 													
 																					<section id="googlemap-section">
-				<div id="ap-map-canvas"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12754.630087086869!2d174.8953653!3d-36.9463504!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa9651f7d24ad5b40!2sLeathersmiths%20Ltd!5e0!3m2!1sen!2sau!4v1607988508980!5m2!1sen!2sau" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen id="cusmap" ></iframe></div>
+				<div id="ap-map-canvas"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.7828093519797!2d77.32655461508202!3d28.606291782428126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjjCsDM2JzIyLjciTiA3N8KwMTknNDMuNSJF!5e0!3m2!1sen!2sin!4v1633945799049!5m2!1sen!2sin" width="1950" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
 		        		            <div class="googlemap-contact">
 		            <div class="ak-container">
 		                <div class="googlemap-contact-wrap">
